Add highlighted filter term hits. Resolve #135.